<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editPersonName"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/arrendondar2"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar2"
            android:drawableStart="@drawable/baseline_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editPersonName"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/editPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar2"
            android:drawableStart="@drawable/baseline_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/EmailAddress"
            app:layout_constraintStart_toStartOf="@+id/EmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editPassword2"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar2"
            android:drawableStart="@drawable/baseline_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/Password"
            app:layout_constraintStart_toStartOf="@+id/Password"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            android:autofillHints="" />

        <Button
            android:id="@+id/button4"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar3"
            android:text="@string/registar"
            app:layout_constraintEnd_toEndOf="@+id/editPassword2"
            app:layout_constraintStart_toStartOf="@+id/editPassword2"
            app:layout_constraintTop_toBottomOf="@+id/editPassword2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar2"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>