<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SigIn">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/teal_200"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:importantForAccessibility="no" />

        <EditText
            android:id="@+id/editTextEmai"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar"
            android:drawableStart="@drawable/baseline_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/textedit_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar"
            android:drawableStart="@drawable/baseline_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmai"
            app:layout_constraintStart_toStartOf="@+id/editTextEmai"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmai"
            tools:ignore="MissingConstraints"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editTextPassword"
            android:layout_marginTop="16dp"
            android:backgroundTint="#596EE3"
            android:onClick="launchCreateAccount"
            android:text="@string/criar_conta"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#25932A"
            android:onClick="logIn"
            android:text="@string/entrar"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="343dp"
            android:layout_height="50dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/arrendondar2"
            android:gravity="center_vertical"
            android:padding="40px"
            android:text="@string/continuar_com_conta_google"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="343dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/arrendondar2"
            android:gravity="center_vertical"
            android:padding="40px"
            android:text="@string/continuar_com_conta_facebook"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#C85151"
            android:onClick="back"
            android:text="@string/voltar"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <ImageView
            android:layout_width="27dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:ignore="MissingConstraints"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="27dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:ignore="MissingConstraints"
            android:importantForAccessibility="no" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>