<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProductDetails">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView_product"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar4"
            android:contentDescription="@string/imageProduct"
            tools:ignore="MissingConstraints">

        </ImageView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/detalhes_do_produto"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_product"
            app:layout_constraintTop_toTopOf="@+id/imageView_product" />

        <Button
            android:id="@+id/addToList_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrendondar3"
            android:onClick="addProductToList"
            android:text="Adicionar á lista"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/pingo_doce"
            app:layout_constraintStart_toStartOf="@+id/imageView_product"
            app:layout_constraintTop_toBottomOf="@+id/imageView_product"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/continente"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/intermarche"
            android:text="€0.96"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton_favorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:contentDescription="@string/menu"
            android:onClick="addProductToList"
            app:layout_constraintStart_toStartOf="@+id/addToList_btn"
            app:layout_constraintTop_toBottomOf="@+id/addToList_btn"
            app:srcCompat="@drawable/favourite_icon_red" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/arrendondar_black_border_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>